--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <time class="datetime">04.20.2023</time>
         </div>
         <section>
-          <div class="label -s --green">New/Buffs</div>
+          <div class="label -s -bg" style="background: #4CAF50">Removed/Nerf</div>
           <ul>
             <li>Now the information shown when capturing a Pokémon is:
             <li id="none">Name, Nature, Ability, and PokeBall used
